AM_CPPFLAGS = $(CXX17_FLAGS)
AM_CXXFLAGS = $(PICKY_CXXFLAGS)

noinst_LIBRARIES = libmushutil.a

libmushutil_a_SOURCES = exception.hh \
	buffer.hh buffer.cc \
	file_descriptor.hh file_descriptor.cc \
	address.hh address.cc \
	eventloop.hh eventloop.cc \
	socket.hh socket.cc \
	secure_socket.hh secure_socket.cc \
	timer.hh timer.cc
