AM_CPPFLAGS = $(CXX17_FLAGS)
AM_CXXFLAGS = $(PICKY_CXXFLAGS)

noinst_LIBRARIES = libmushutil.a

libmushutil_a_SOURCES = exception.hh \
	file_descriptor.hh file_descriptor.cc \
	address.hh address.cc \
	eventloop.hh eventloop.cc \
	socket.hh socket.cc \
	ring_buffer.hh ring_buffer.cc \
	secure_socket.hh secure_socket.cc \
	timer.hh timer.cc \
	build-id.hh build-id.cc \
	split.hh split.cc \
	convert.hh convert.cc
